# OOP

./: README.md
resources/definitions/: Euro_blocks.txt  java_blocks.txt  medium_level_definition.txt
src/: Ass6Game.java  CMakeLists.txt  highScore.txt
src/animations/: Animation.java  AnimationRunner.java  CountdownAnimation.java  EndScreen.java  HighScoresAnimation.java  KeyPressStoppableAnimation.java  Menu.java  MenuAnimation.java  MenuChoice.java  PauseScreen.java
src/collidables/: Ball.java  Block.java  Collidable.java  Paddle.java  Sprite.java  SpriteCollection.java
src/game/: Boundary.java  Counter.java  GameEnvironment.java  GameFlow.java  GameLevel.java
src/geometry/: Line.java  Point.java  Rectangle.java
src/indicator/: LevelIndicator.java  LivesIndicator.java  ScoreIndicator.java
src/information/: BackgroundSpriteImpl.java  BlockCreator.java  BlockCreatorImpl.java  BlockImages.java  BlocksDefinitionReader.java  CollisionInfo.java  ColorsParser.java  HighScoresTable.java  LevelInformation.java  LevelSpecificationReader.java  Property.java  ScoreInfo.java  Velocity.java
src/levels/: BlocksFromSymbolsFactory.java  LevelInformationImpl.java  LevelSetsReader.java  SetLevels.java  Sets.java
src/listener/: HitListener.java  HitNotifier.java  ScoreTrackingListener.java
src/practice6/: CMakeLists.txt
src/remover/: BallRemover.java  BlockRemover.java
src/tasks/: Exit.java  ShowHiScoresTask.java  SubMenuTask.java  Task.java
